--- a/mybib.bib
+++ b/mybib.bib
@@ -107,3 +107,14 @@
   year={2015},
   publisher={APS}
 }
+
+@Misc{turbinesFoam-v0.0.7,
+  author =       {Peter Bachant and Anders Goude and Martin Wosnik},
+  title =        {{turbinesFoam}: v0.0.7},
+  howpublished = {Zenodo. \url{http://dx.doi.org/10.5281/zenodo.49422}},
+  year =         {2016},
+  doi =          {10.5281/zenodo.49422},
+  owner =        {Pete},
+  timestamp =    {2016.03.16},
+  url =          {http://dx.doi.org/10.5281/zenodo.49422}
+}
