Take 'ALM' out of heading

--- a/paper.tex
+++ b/paper.tex
@@ -73,7 +73,7 @@ In this work, it was chosen to validate the model against wind tunnel data for a
 pitching blade. This will put the focus on the force modeling part in the
 simulation model.
 
-\subsection{Actuator Line Model (ALM)}
+\subsection{Actuator Line Model}
 
 The ALM is a three-dimensional and unsteady aerodynamic model developed by
 S{\o}rensen and Shen\cite{sorensen1999computation}, used to study the flow
