Remove acronym from heading

--- a/paper.tex
+++ b/paper.tex
@@ -131,9 +131,12 @@ support struts. After all these forces on the actuator lines are calculated,
 then are added as a body force source, per unit of density (incompressible
 assumption), in the momentum Navier--Stokes equations (equation \ref{eqmom}).
 
-\subsection{Dynamic Stall Modeling (DSM)} The DSM is represented by the
-Leishman-Beddoes model~\cite{leishman1986generalised} with the modifications of
-Sheng et al.~\cite{sheng2008modified} and Dyachuk~\cite{dyachuk}. It is capable to
+
+\subsection{Dynamic Stall Modeling}
+
+The dynamic stall model (DSM) is represented by the Leishman-Beddoes
+model~\cite{leishman1986generalised} with the modifications of Sheng et
+al.~\cite{sheng2008modified} and Dyachuk~\cite{dyachuk}. It is capable to
 calculate the unsteady lift, pitching moment and drag, giving a physical
 description of the aerodynamics. It have been validated with experimental data
 in~\cite{leishman1989semi}. The model is separated into three subsystems: an
