'rel' in subscript should not be italics

--- a/paper.tex
+++ b/paper.tex
@@ -115,10 +115,10 @@ plane perpendicular to the turbine axis.
 
 Once the angle of attack, relative velocity are obtained, the blade element lift and drag forces per spanwise length unit are calculated as
 \begin{align}
-& f_L = \frac{1}{2} \ \rho \ c \ C_L \left| V_{rel} \right|^2  \label{lift}
+& f_L = \frac{1}{2} \ \rho \ c \ C_L \left| V_{\mathrm{rel}} \right|^2  \label{lift}
 \end{align} %\begin{align}
 \begin{align}
-& f_D = \frac{1}{2} \ \rho \ c \ C_D \left| V_{rel} \right|^2  \label{drag}
+& f_D = \frac{1}{2} \ \rho \ c \ C_D \left| V_{\mathrm{rel}} \right|^2  \label{drag}
 \end{align} %\begin{align}
 where $C_L$ and $C_D$ are the lift and drag coefficients, respectively. Both are
 function of the Reynolds number and the angle of attack. It should be emphasized
